Fixes problem with filter link on ontologies page. Makes it so that the top right menu won't drop down or overlap.

--- a/public/stylesheets/layout/bioportal.css
+++ b/public/stylesheets/layout/bioportal.css
@@ -141,6 +141,7 @@ h1 a:hover, h2 a:hover {
 #hd {
 	background: url('/images/layout/header_bg.png') repeat-x;
 	width: 100%;
+	min-width: 1200px;
 	height: 43px;
 	margin: auto;
 	text-align: left;
@@ -158,9 +159,6 @@ h1 a:hover, h2 a:hover {
 }
 #hd ul.alignright {
 	padding: 0.3em 0 0.5em 0;
-	position: absolute;
-	right: .3em;
-	top: .25em;
 }
 #hd ul.alignright li {
 	display:inline;
